--- a/css/index.css
+++ b/css/index.css
@@ -120,8 +120,19 @@ body {
   letter-spacing: 1.5px;
 }
 
+@media only screen and (max-width: 600px) {
+  .card {
+    width: 326px;
+  }
+}
+
 .attribution {
   position: absolute;
   bottom: 0;
+  width: 100%;
+  text-align: center;
+  background-color: #19a2ae;
+  padding: 16px;
+  font-size: 18px;
 }
 /*# sourceMappingURL=index.css.map */
