--- a/index.scss
+++ b/index.scss
@@ -107,7 +107,17 @@ body {
   }
 }
 
+@media only screen and (max-width: 600px) {
+  .card {
+    width: 326px;
+  }
+}
 .attribution {
   position: absolute;
   bottom: 0;
+  width: 100%;
+  text-align: center;
+  background-color: $dark-cyan;
+  padding: 16px;
+  font-size: $font-size;
 }
